<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenstackDroid</string>
    <string name="action_settings">Settings</string>
	<string name="add_profile">Add</string>
	<string name="profile_name">Profile name</string>
	<string name="endpoint">API endpoint</string>
	<string name="endpoint_hint">http://&lt;Openstack IP>:&lt;port></string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="tenantId">Tenant id</string>
	<string name="edit">Edit</string>
	<string name="clone">Clone</string>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
</resources>