<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profile_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name" />

    <EditText
        android:id="@+id/profile_name_edittext"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/endpoint_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endpoint" />

    <EditText
        android:id="@+id/endpoint_edittext"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/endpoint_hint"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tenant_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenantId" />

    <EditText
        android:id="@+id/tenant_id_edittext"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

</LinearLayout>